# deepseek-zebra-puzzle

./: .env.example  .gitignore  EXPERIMENT.md  README.md  pyproject.toml  requirements.txt  run.py
config/model/: deepseek_r1.yaml  deepseek_r1_local.yaml  deepseek_r1_local_8001.yaml  deepseek_r1_local_8002.yaml  deepseek_r1_local_8003.yaml
config/task/: zebra_puzzle.yaml  zebra_puzzle_split1.yaml  zebra_puzzle_split2.yaml  zebra_puzzle_split3.yaml  zebra_puzzle_split4.yaml
data/: batch_importance_scores.json  bbeh_zebra_puzzles.jsonl  bbeh_zebra_puzzles_scored.jsonl  bbeh_zebra_puzzles_scored_g5.jsonl  bbeh_zebra_puzzles_scored_g567.jsonl  bbeh_zebra_puzzles_scored_g6.jsonl  bbeh_zebra_puzzles_scored_g7.jsonl  bbeh_zebra_puzzles_scored_g8.jsonl  g7_split1.jsonl  g7_split2.jsonl  g7_split3.jsonl  g7_split4.jsonl
safety-tooling/safetytooling/apis/inference/: api.py
safety-tooling/safetytooling/apis/inference/openai/: chat.py
safety-tooling/safetytooling/data_models/: messages.py
scripts/: analyze_results.py  extract_deduction_nodes.py  extract_deductions.py  extract_deductions_llm.py  extract_markers.py  test_two_stage.py
src/: evaluator.py  model_interface.py  results_manager.py  task_loader.py
src/utils/: analysis.py  model_helpers.py  plotting.py
